src/page-modules/departures/details/details.module.css
.container {
  margin: 0 auto;
  max-width: var(--maxPageWidth);
  padding: token('spacing.xLarge');

  display: grid;
  grid-template-columns: 2fr 3fr;
  grid-template-areas:
    'header header'
    'serviceJourney map';
  gap: token('spacing.large');
}
@media (max-width: 650px) {
  .container {
    grid-template-columns: 1fr;
    grid-template-areas:
      'header'
      'map'
      'serviceJourney';
  }
}
.headerContainer {
  grid-area: header;
  display: flex;
  flex-direction: column;
  gap: token('spacing.large');
}
.mapContainer {
  grid-area: map;
  max-height: 37.5rem;
  width: 100%;
  margin: 0 auto;
}
.serviceJourneyContainer {
  grid-area: serviceJourney;
  display: flex;
  flex-direction: column;
  gap: token('spacing.medium');
}

.header {
  display: flex;
  align-items: center;
  gap: token('spacing.large');
}

.realtimeText {
  display: flex;
  align-items: center;
  gap: token('spacing.small');
  font-size: 0.875rem;
  color: token('color.foreground.dynamic.secondary');
}

.callRows {
  margin-top: token('spacing.large');
}
.callRows__container {
  padding: token('spacing.medium');
}
.callRows__container:nth-of-type(odd) {
  padding-bottom: token('spacing.large');
}
.callRows__container:nth-of-type(even) {
  padding-top: 0;
}
.rowContainer {
  position: relative;
  overflow: hidden;
  --labelWidth: 5rem;
  --decorationContainerWidth: 1.25rem;
  --decorationLineWidth: 0.25rem;
  --decorationLineEndWidth: 0.75rem;
  --decorationLineInset: 1rem;
}
.boardingInfo {
  color: token('color.foreground.dynamic.secondary');
}
.collapseButton {
  padding: token('spacing.xSmall');
  margin-bottom: token('spacing.medium');
  margin-left: calc(
    var(--labelWidth) + var(--decorationContainerWidth) -
      token('spacing.xSmall')
  );
  color: token('color.foreground.dynamic.secondary');
}
.row {
  display: flex;
  flex: 1;
  flex-direction: row;
  justify-content: center;
  padding: token('spacing.small') 0;
  text-decoration: none;
  color: inherit;
}
.middleRow {
  min-height: 3.75rem;
}
.leftColumn {
  display: flex;
  justify-content: flex-end;
  min-width: var(--labelWidth);
}
.rightColumn {
  flex: 1;
}
.decorationPlaceholder {
  width: token('spacing.large');
}

